# aevm

./: .gitignore  README.md  TODO  aevm.cabal  flevm.cabal  stack.yaml
app/: Main.hs
src/: ConfoundMain.hs
src/Confound/: Analyse.hs  Contracts.hs  Main.hs  Methods.hs  Types.hs  Util.hs
src/Control/Monad/: Combinator.hs  Execution.hs  If.hs  Interruptible.hs  Result.hs  Resultant.hs
src/Control/Monad/Resultant/: IO.hs
src/Data/Space/: StateTree.hs
src/Fluidity/: EVM.hs
src/Fluidity/Common/: ANSI.hs  Binary.hs  Crypto.hs  RLP.hs
src/Fluidity/EVM/: Blockchain.hs  Bytecode.hs  Control.hs  Data.hs  Decode.hs  Encode.hs  Parallel.hs  Provenance.hs  REPL.hs  Text.hs  Types.hs  VM.hs
src/Fluidity/EVM/Analyse/: Dependency.hs  Formula.hs  Outcome.hs  Pathfinder.hs  Solver.hs  Watchdog.hs
src/Fluidity/EVM/Core/: Blockchain.hs  Control.hs  Interrupt.hs  System.hs  VM.hs
src/Fluidity/EVM/Data/: Account.hs  ByteField.hs  Bytecode.hs  Format.hs  Import.hs  Operations.hs  Prov.hs  Snapshot.hs  Transaction.hs  Value.hs
src/Fluidity/EVM/REPL/: Chain.hs  Command.hs  EVM.hs  Help.hs  Meta.hs  Monad.hs  Monitor.hs  Parallel.hs  Parser.hs  State.hs  Walk.hs
src/Fluidity/EVM/Text/: Disassembly.hs  Dump.hs  Util.hs
src/Text/: Structured.hs
test/: Spec.hs  test.hs
test/Test/Control/Monad/: ExecutionSpec.hs
test/Test/Fluidity/EVM/Core/: SystemSpec.hs
test/Test/Fluidity/EVM/Data/: BytecodeSpec.hs
test/TestData/EVM/: Contracts.hs
