name:                aevm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/flevm#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Fluidity.Common.ANSI
                     , Fluidity.Common.Binary
                     , Fluidity.Common.Crypto
                     , Fluidity.Common.RLP

                     , Fluidity.EVM.Analyse.Dependency
                     , Fluidity.EVM.Analyse.Formula
                     , Fluidity.EVM.Analyse.Outcome
                     , Fluidity.EVM.Analyse.Pathfinder
                     , Fluidity.EVM.Analyse.Watchdog

                     , Fluidity.EVM.Core.Blockchain
                     , Fluidity.EVM.Core.Control
                     , Fluidity.EVM.Core.Interrupt
                     , Fluidity.EVM.Core.System
                     , Fluidity.EVM.Core.VM

                     , Fluidity.EVM.Data.Account
                     , Fluidity.EVM.Data.Bytecode
                     , Fluidity.EVM.Data.ByteField
                     , Fluidity.EVM.Data.Format
                     , Fluidity.EVM.Data.Import
                     , Fluidity.EVM.Data.Prov
                     , Fluidity.EVM.Data.Operations
                     , Fluidity.EVM.Data.Snapshot
                     , Fluidity.EVM.Data.Transaction
                     , Fluidity.EVM.Data.Value

                     , Fluidity.EVM.REPL
                     , Fluidity.EVM.REPL.Chain
                     , Fluidity.EVM.REPL.Command
                     , Fluidity.EVM.REPL.EVM
                     , Fluidity.EVM.REPL.Help
                     , Fluidity.EVM.REPL.Meta
                     , Fluidity.EVM.REPL.Monad
                     , Fluidity.EVM.REPL.Monitor
                     , Fluidity.EVM.REPL.Parallel
                     , Fluidity.EVM.REPL.Parser
                     , Fluidity.EVM.REPL.State
                     , Fluidity.EVM.REPL.Walk

                     , Fluidity.EVM.Text
                     , Fluidity.EVM.Text.Disassembly
                     , Fluidity.EVM.Text.Dump
                     , Fluidity.EVM.Text.Util

                     , Fluidity.EVM
                     , Fluidity.EVM.Parallel
                     , Fluidity.EVM.Types

                     , Confound.Methods
                     , Confound.Types
                     , Confound.Util

                     , Control.Monad.Combinator
                     , Control.Monad.Execution
                     , Control.Monad.If
                     , Control.Monad.Interruptible
                     , Control.Monad.Result
                     , Control.Monad.Resultant
                     , Control.Monad.Resultant.IO

                     , Data.Space.StateTree

                     , Text.Structured

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , ansi-terminal
                     , array
                     , bits-bytestring
                     , base16-bytestring
                     , bytestring
                     , containers
                     , cryptonite
                     , deepseq
                     , filepath
                     , json-stream
                     , haskeline
                     , memory
                     , monad-loops
                     , parallel
                     , parsec
                     , split
                     , strict
                     , unordered-containers
                     , text
                     , time

executable aevm
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , aevm
                     , optparse-applicative
                     , text

executable confound
  hs-source-dirs:      src
  main-is:             ConfoundMain.hs
  default-language:    Haskell2010
  other-modules:       Confound.Contracts
                     , Confound.Methods
                     , Confound.Types
                     , Confound.Util
                     , Control.Monad.Result
                     , Control.Monad.Resultant
                     , Fluidity.Common.Binary
  build-depends:       base >= 4.7 && < 5
                     , array
                     , base16-bytestring
                     , bits-bytestring
                     , bytestring
                     , containers
                     , cryptonite
                     , deepseq
                     , filepath
                     , haskeline
                     , memory
                     , monad-loops
                     , optparse-applicative
                     , split
                     , text

test-suite execution
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             test.hs
  default-language:    Haskell2010
  build-depends:       aevm
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , deepseq
                     , tasty
                     , tasty-hspec
                     , QuickCheck
                     , hspec
  other-modules:       Test.Fluidity.EVM.Data.BytecodeSpec




